database schema update

--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
       });
       function myFunction() {
         socket.emit('message', {
-          to: '12345',
-          from: 'fdsa',
+          to: 'colinskeep83112',
+          from: 'Ted',
           message: document.getElementById('m').value,
           type: 'chat',
         });
